--- a/Launcher/App/src/main/AndroidManifest.xml
+++ b/Launcher/App/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-feature android:name="android.hardware.vr.headtracking" android:required="false" android:version="1"/>
+    <uses-feature android:name="oculus.software.handtracking" android:required="false"/>
+    <uses-permission android:name="com.oculus.permission.HAND_TRACKING"/>
+
     <application
         android:icon="@drawable/ic_appicon"
         android:label="@string/app_name"
@@ -13,6 +17,7 @@
         android:usesCleartextTraffic="true"
         android:allowBackup="true">
 
+        <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true" maxSizeX="1280" maxSizeY="1000" minSizeX="400" minSizeY="400"/>
 
         <activity
             android:name=".MainActivity"
