--- a/Launcher/App/src/main/AndroidManifest.xml
+++ b/Launcher/App/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-feature android:name="oculus.software.handtracking" android:required="false"/>
     <uses-permission android:name="com.oculus.permission.HAND_TRACKING"/>
 
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+
     <application
         android:icon="@drawable/ic_appicon"
         android:label="@string/app_name"
@@ -17,20 +19,16 @@
         android:usesCleartextTraffic="true"
         android:allowBackup="true">
 
-        <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true" maxSizeX="1280" maxSizeY="1000" minSizeX="400" minSizeY="400"/>
-
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleInstance"
-            android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="unspecified"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
         </activity>
 
         <service
