--- a/Launcher/App/build.gradle
+++ b/Launcher/App/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
+    compileSdkVersion 33
+
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 33
