--- a/Launcher/App/build.gradle
+++ b/Launcher/App/build.gradle
@@ -5,12 +5,11 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
-        minSdkVersion 23
+        minSdkVersion 24
         targetSdkVersion 33
-        versionCode 302
-        versionName "3.0.2"
+        versionCode 350
+        versionName "3.5.0"
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -31,8 +30,8 @@ android {
 
 dependencies {
     implementation 'com.github.bkhezry:android-image-picker:1.4.0'
-    implementation 'com.github.stephenc.java-iso-tools:loopy-vfs:1.2.2'
     implementation 'com.github.Dimezis:BlurView:version-2.0.3'
-    implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.core:core:1.10.1"
+    implementation 'com.android.volley:volley:1.2.1'
 }
