--- a/Launcher/App/src/main/AndroidManifest.xml
+++ b/Launcher/App/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:ignore="QueryAllPackagesPermission" />
 
     <application
-        android:icon="@drawable/ic_appicon"
+        android:icon="@drawable/ic_app_icon"
         android:label="@string/app_name"
         android:theme="@style/ThemeOverlay.Material"
         android:requestLegacyExternalStorage="true"
@@ -29,7 +29,6 @@
             android:launchMode="singleInstance"
             android:excludeFromRecents="true"
             android:resizeableActivity="true"
-            android:noHistory="true"
             android:finishOnTaskLaunch="true"
             android:clearTaskOnLaunch="true"
             android:finishOnCloseSystemDialogs="true">
