--- a/Launcher/App/build.gradle
+++ b/Launcher/App/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.core:core:1.10.1"
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.core:core-animation:1.0.0-rc01'
 }
