--- a/Launcher/App/src/main/AndroidManifest.xml
+++ b/Launcher/App/src/main/AndroidManifest.xml
@@ -28,15 +28,12 @@
         <meta-data android:name="com.oculus.supportedDevices" android:value="all"/>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".launcher.LauncherActivityEditable"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
             android:launchMode="singleTask"
-            android:resizeableActivity="true"
-            android:finishOnTaskLaunch="true"
-            android:clearTaskOnLaunch="true"
-            android:finishOnCloseSystemDialogs="true">
+            android:resizeableActivity="true">
 
             <layout android:defaultWidth="706dp"
                 android:defaultHeight="442dp"
@@ -56,7 +53,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".web.WebViewActivity"
+        <activity android:name=".browser.BrowserActivity"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
@@ -76,7 +73,7 @@
         </activity>
 
         <service
-            android:name=".helpers.LauncherAccessibilityService"
+            android:name=".support.ShortcutAccessibilityService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
             android:exported="true">
@@ -89,7 +86,12 @@
         </service>
 
         <service
-            android:name=".web.WebViewService"
+            android:name=".browser.BrowserService"
+            android:exported="true">
+        </service>
+
+        <service
+            android:name=".launcher.LauncherService"
             android:exported="true">
         </service>
 
