--- a/Launcher/App/src/main/AndroidManifest.xml
+++ b/Launcher/App/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--suppress AndroidElementNotAllowed -->
+<!-- The layout attribute is considered invalid, but still works to set default window size -->
 <manifest xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -6,7 +8,7 @@
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES"/>
 
-    <uses-feature android:name="android.hardware.vr.headtracking" android:required="false" android:version="1"/>
+    <uses-feature android:name="android.hardware.vr.headtracking" android:required="false"/>
     <uses-feature android:name="oculus.software.handtracking" android:required="false"/>
     <uses-permission android:name="com.oculus.permission.HAND_TRACKING"/>
 
@@ -27,74 +29,70 @@
 
         <meta-data android:name="com.oculus.supportedDevices" android:value="all"/>
 
+        <!-- Main activity, called by the launcher & shortcut apk -->
         <activity
             android:name=".launcher.LauncherActivityEditable"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
             android:launchMode="singleInstancePerTask"
-            android:resizeableActivity="true">
+            android:resizeableActivity="true"
+            tools:ignore="UnusedAttribute">
 
-            <layout android:defaultWidth="706dp"
-                android:defaultHeight="442dp"
-                android:gravity="top|end" />
-
+            <layout android:defaultWidth="706dp" android:defaultHeight="442dp" android:gravity="top|end" />
             <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true"/>
             <meta-data android:name="com.oculus.vrshell.free_resizing_limits" android:value="300,2000,500,1000"/>
 
             <intent-filter>
-                <action android:name="com.oculus.vrshell.SHELL_MAIN"/>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.HOME"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+        <!-- Activity called by accessibility service -->
         <activity
             android:name=".launcher.LauncherActivityAlternate"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
+            android:launchMode="singleInstancePerTask"
             android:resizeableActivity="true"
-            android:launchMode="singleInstancePerTask">
+            tools:ignore="UnusedAttribute">
 
-            <layout android:defaultWidth="706dp"
-                android:defaultHeight="442dp"
-                android:gravity="top|end" />
-
+            <layout android:defaultWidth="706dp" android:defaultHeight="442dp" android:gravity="top|end" />
             <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true"/>
             <meta-data android:name="com.oculus.vrshell.free_resizing_limits" android:value="300,2000,500,1000"/>
         </activity>
-
+        <!-- Activity for browsers which open within the main window -->
         <activity android:name=".browser.BrowserActivity"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
             android:launchMode="singleInstancePerTask"
-            android:resizeableActivity="true">
+            android:resizeableActivity="true"
+            tools:ignore="UnusedAttribute">
 
-            <layout android:defaultWidth="706dp"
-                android:defaultHeight="442dp"
-                android:gravity="top|end" />
+            <layout android:defaultWidth="706dp" android:defaultHeight="442dp" android:gravity="top|end" />
 
             <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true"/>
             <meta-data android:name="com.oculus.vrshell.free_resizing_limits" android:value="300,2000,500,1000"/>
         </activity>
+        <!-- Activity for browsers which open in a separate window -->
         <activity android:name=".browser.BrowserActivitySeparate"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
             android:launchMode="singleInstancePerTask"
-            android:resizeableActivity="true">
+            android:resizeableActivity="true"
+            tools:ignore="UnusedAttribute">
 
-            <layout android:defaultWidth="706dp"
-                android:defaultHeight="442dp"
-                android:gravity="top|end" />
-
+            <layout android:defaultWidth="706dp" android:defaultHeight="442dp" android:gravity="top|end" />
             <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true"/>
             <meta-data android:name="com.oculus.vrshell.free_resizing_limits" android:value="300,2000,500,1000"/>
         </activity>
 
+        <!-- Library Shortcut Accessibility Service -->
         <service
             android:name=".support.ShortcutAccessibilityService"
             android:label="@string/app_name"
@@ -107,17 +105,16 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-
+        <!-- Service that provides/manages WebViews -->
         <service
             android:name=".browser.BrowserService"
             android:exported="true">
         </service>
-
+        <!-- Service that provides/manages Launcher views -->
         <service
             android:name=".launcher.LauncherService"
             android:exported="true">
         </service>
-
     </application>
 
 </manifest>
