--- a/Launcher/App/src/main/AndroidManifest.xml
+++ b/Launcher/App/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
-            android:launchMode="singleInstancePerTask"
+            android:launchMode="singleInstance"
             android:resizeableActivity="true"
             tools:ignore="UnusedAttribute">
 
@@ -56,7 +56,7 @@
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
-            android:launchMode="singleInstancePerTask"
+            android:launchMode="singleInstance"
             android:resizeableActivity="true"
             tools:ignore="UnusedAttribute">
 
