--- a/LauncherShortcut/app/src/main/AndroidManifest.xml
+++ b/LauncherShortcut/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-feature android:name="android.hardware.vr.headtracking" android:required="false" android:version="1"/>
     <uses-feature android:name="oculus.software.handtracking" android:required="false"/>
@@ -12,14 +11,9 @@
         <package android:name="com.veticia.piLauncherNext" />
     </queries>
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MessengerRedirect"
-        tools:targetApi="31">
+        android:theme="@style/Theme.MessengerRedirect">
 
         <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true"/>
         <meta-data android:name="com.oculus.vrshell.free_resizing_limits" android:value="300,2000,500,1000"/>
@@ -28,10 +22,10 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="unspecified"
-            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
-            android:label="@string/app_name"
+            android:configChanges="density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
             android:theme="@style/Theme.MessengerRedirect">
 
+            <!--suppress AndroidElementNotAllowed -->
             <layout android:defaultWidth="706dp"
                 android:defaultHeight="442dp"
                 android:gravity="top|end" />
