--- a/Launcher/App/src/main/AndroidManifest.xml
+++ b/Launcher/App/src/main/AndroidManifest.xml
@@ -28,19 +28,19 @@
         android:label="@string/app_name"
         android:theme="@style/ThemeOverlay.Material"
         android:requestLegacyExternalStorage="true"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:ignore="UnusedAttribute">
 
         <meta-data android:name="com.oculus.supportedDevices" android:value="all"/>
 
         <!-- Main activity, called by the launcher & shortcut apk -->
         <activity
-            android:name=".launcher.LauncherActivityEditable"
+            android:name=".launcher.LauncherActivityDefault"
             android:screenOrientation="unspecified"
             android:configChanges="density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
             android:exported="true"
             android:launchMode="singleInstance"
-            android:resizeableActivity="true"
-            tools:ignore="UnusedAttribute">
+            android:resizeableActivity="true" >
 
             <layout android:defaultWidth="706dp" android:defaultHeight="442dp" android:gravity="top|end" />
             <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true"/>
@@ -55,13 +55,12 @@
         </activity>
         <!-- Activity called by accessibility service -->
         <activity
-            android:name=".launcher.LauncherActivityAlternate"
+            android:name=".launcher.LauncherActivityShortcutService"
             android:screenOrientation="unspecified"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
             android:launchMode="singleInstance"
-            android:resizeableActivity="true"
-            tools:ignore="UnusedAttribute">
+            android:resizeableActivity="true">
 
             <layout android:defaultWidth="706dp" android:defaultHeight="442dp" android:gravity="top|end" />
             <meta-data android:name="com.oculus.vrshell.supports_free_resizing" android:value="true"/>
@@ -73,8 +72,7 @@
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true"
             android:launchMode="singleInstancePerTask"
-            android:resizeableActivity="true"
-            tools:ignore="UnusedAttribute">
+            android:resizeableActivity="true">
 
             <layout android:defaultWidth="706dp" android:defaultHeight="442dp" android:gravity="top|end" />
 
