--- a/Launcher/App/build.gradle
+++ b/Launcher/App/build.gradle
@@ -2,9 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
-    compileSdkVersion 34
-
     defaultConfig {
+        compileSdk 34
         minSdkVersion 23
         versionCode 510
         versionName "5.1.0"
