--- a/ExploreShortcutService/app/build.gradle
+++ b/ExploreShortcutService/app/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.threethan.launcher.service.explore"
         minSdk 23
-        versionCode 1000000510
+        versionCode 510
         versionName "5.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
